Add "not contains"
Add "not contains" comparator to vault search
Fixes #925

--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -577,3 +577,5 @@ news.showLadderMaps = Показать рейтинговые карты
 ranked1v1.showMaps = Показать рейтинговые карты
 settings.language = Язык
 settings.notifications.displayNotification = Показывать уведомление
+query.contains=содержит
+query.notContains=не содержит
